--- a/assets/style.css
+++ b/assets/style.css
@@ -159,9 +159,9 @@ body {
     margin: 20px 0px;
   } 
   .section__container {
-      max-width: 1290px;
+      max-width: 1320px;
       padding: 0px 15px;
-      margin: 20px auto;
+      margin: auto;
   }
   .section_top {
     background: #252f3e;
@@ -185,11 +185,46 @@ body {
   .logo__img {
     max-height: 100px;
   }
-.form {
+.workspace {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 200px 1fr;
+  grid-gap: 20px;
+  height: 100vh;
+}
+.tree {
+  height: 100vh;
+  overflow: auto;
+  padding: 0;
+  margin: 0;
+}
+.tree__link_big {
+  font-size: 18px;
+  font-weight: 700;
+}
+.tree__link_red {
+  color: #F0483D;
+}
+.note-form__textarea {
+  height: 100%;
+}
+.note-form__backend-success {
+  margin-bottom: 15px;
+}
+.note-form__backend-errors {
+  margin-bottom: 15px;
+}
+.note-form__input {
+  margin-bottom: 15px;
+}
+.note-form__button {
+  margin-top: 15px;
+}
+.note-form {
     display: grid;
-    grid-template-rows: auto auto auto auto auto;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 15px 2vw;
+    grid-template-rows: auto auto 1fr;
+    grid-template-columns: 1fr 33%;
+    grid-gap: 0px 2vw;
   }
   .form__field {
     position: relative;
@@ -202,7 +237,7 @@ body {
     color: #8E8E8E;
     font-size: 12px;
     line-height: 16px;
-    margin: 0px 0px 15px 0px;
+    margin: 0px 0px 10px 0px;
   }
   .form__input {
     box-sizing: border-box;
@@ -215,7 +250,6 @@ body {
     font-size: 16px;
     line-height: 20px;
     outline: 0;
-    margin: 0px 0px 10px 0px;
   }
   .form__success {
     font-weight: 400;
@@ -309,7 +343,6 @@ body {
   .form__textarea {
     box-sizing: border-box;
     width: 100%;
-    height: 144px;
     background: #FEFEFE;
     border: 1px solid #CCCCCC;
     border-radius: 12px;
@@ -381,12 +414,12 @@ body {
     padding: 0;
 }
 .list__item {
-    padding-left: 18px;
+    /* padding-left: 18px; */
     padding-bottom: 8px;
-    background-image: url('/assets/images/Frame\ 47.svg');
+    /* background-image: url('/assets/images/Frame\ 47.svg');
     background-repeat: no-repeat;
     background-position: 0px -8px;
-    background-size: 16px;
+    background-size: 16px; */
 }
 .list__item_cat-marker {
     background-size: 24px;
