--- a/assets/style.css
+++ b/assets/style.css
@@ -163,7 +163,7 @@ body {
       padding: 0px 15px;
       margin: auto;
   }
-  .section_top {
+  /* .section_top {
     background: #252f3e;
   }
   .section__header {
@@ -172,15 +172,24 @@ body {
   }
   .section__footer {
       margin: 80px auto 40px;
-  }
+  } */
   .header {
     display: grid;
     grid-template-rows: auto;
     grid-template-columns: 1fr 1fr;
     align-items: center;
+    height: 5vh;
+  }
+  .footer {
+    display: grid;
+    align-items: center;
+    height: 5vh;
   }
   .header__buttons {
     text-align: right;
+  }
+  .logo__link {
+
   }
   .logo__img {
     max-height: 100px;
@@ -190,20 +199,27 @@ body {
   grid-template-rows: 1fr;
   grid-template-columns: 200px 1fr;
   grid-gap: 20px;
-  height: 100vh;
+  height: 90vh;
 }
 .tree {
-  height: 100vh;
+  /* height: 100vh; */
   overflow: auto;
   padding: 0;
   margin: 0;
 }
-.tree__link_big {
+.link_big {
   font-size: 18px;
   font-weight: 700;
 }
-.tree__link_red {
+.list__link_red {
   color: #F0483D;
+}
+.list__item_bold {
+  font-weight: 700;
+}
+.list__link.active {
+  font-weight: 700;
+  color: #EB5A0A;
 }
 .note-form__textarea {
   height: 100%;
@@ -428,6 +444,39 @@ body {
     background-size: 24px;
     padding: 15px 30px;
     background-position: 0px 12px;
+}
+.accordeon {
+  position: relative;
+  display: block;
+  cursor: pointer;
+}
+.accordeon + * {
+  display: none;
+}
+.accordeon::after {
+  content: ''; 
+  position: absolute; 
+  top: 8px;
+  border-width: 6px;
+  border-color: transparent;
+  border-style: solid;
+  border-top-color: #EB5A0A; 
+  margin-left: 5px;
+}
+.accordeon_show {
+}
+.accordeon_show::after {
+  top: 0px;
+  border-color: transparent;
+  border-bottom-color: #EB5A0A; 
+}
+.accordeon_show + * {
+  display: block;
+}
+.list__sub {
+  /* min-height: 800px; */
+  /* padding-bottom: 150px;
+  margin-bottom: -150px; */
 }
 
 @media (max-width: 767px) {
