--- a/assets/style.css
+++ b/assets/style.css
@@ -151,6 +151,10 @@ body {
     padding: 14px 20px;
     display: inline-block;
   }
+  .button_disabled {
+    background: #888;
+    cursor: default;
+  }
   .title {
     margin: 0;
     font-family: 'Manrope';
@@ -211,7 +215,7 @@ body {
   font-size: 18px;
   font-weight: 700;
 }
-.list__link_red {
+.link_red {
   color: #F0483D;
 }
 .list__item_bold {
